--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "@types/pg": "^8.10.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "pg": "^8.11.3"
     }
 }
